@@ -1,5 +1,6 @@
 2.2.5
 - dropped CStdString usage
+- added: implementation of GetBufferTimeStart and GetBufferTimeEnd (timeshifting).
 
 2.2.4
 - added: Predictive tuning (thanks @martinwilli)
